--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^3.7.2"
   },
   "dependencies": {
+    "@nestjs/core": "^7.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
